generate readme documentation with verb

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
       "gulp-format-md"
     ],
     "related": {
+      "highlight": "generate-travis",
       "list": [
         "generate",
         "generate-file",
